// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageContent accepts panel props 1`] = `
<div
  class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
  role="main"
/>
`;

exports[`EuiPageContent horizontalPosition is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
  role="main"
/>
`;

exports[`EuiPageContent is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent testClass1 testClass2 emotion-euiPanel-grow-m-l-plain-hasShadow-euiTestCss"
  data-test-subj="test subject string"
  role="main"
/>
`;

exports[`EuiPageContent role can be removed 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent emotion-euiPanel-grow-m-l-plain-hasShadow"
/>
`;

exports[`EuiPageContent verticalPosition is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
  role="main"
/>
`;
